--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@editorjs/header": "^2.7.0",
     "@prisma/client": "^5.4.1",
     "@radix-ui/themes": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
